--- a/style.css
+++ b/style.css
@@ -3,3 +3,64 @@ Header background - #FFDBAA
 button - #805215
 Header Text - #553100
 Main background - #D4A76A*/
+
+header {
+    background-color: #FFDBAA;
+    height: 150px;
+    border-bottom: 2px solid black;
+    align-items: center;
+    padding-top: 40px;
+}
+
+h1 {
+    display: inline;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 4em;
+    color: #553100;
+    padding: 10%;
+}
+
+.header-button {
+    width: fit-content;
+    height: 40%;
+    border: none;
+    background-color: #805215;
+    -webkit-text-fill-color: white;
+    font-size: 2em;
+    font-weight: 600;
+    margin-inline: 50px;
+}
+
+.card {
+    display: inline;
+    box-shadow: 0px 0px 10px;
+    width: 100%;
+    height: 50%;
+    padding: 10px;
+    margin: 2%;
+    align-content: center;
+    background-color: white;
+}
+
+.card-button {
+    width: 100%;
+    height: 40%;
+    background-color: #805215;
+    -webkit-text-fill-color: white;
+    font-size: x-large;
+    padding: 20px;
+}
+
+.flex-container {
+    display: flex;
+}
+
+h3 {
+    text-align: center;
+}
+
+main {
+    padding: 2%;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #D4A76A;
+}
